--- a/master_thesis/sections/related_work.tex
+++ b/master_thesis/sections/related_work.tex
@@ -254,7 +254,7 @@ are computable with one maximum $(s,t)$-flow computation.
 To understand the main theorem and the algorithm to compute all minimum $(s,t)$-cutsets we
 need the definition of a \emph{closed node set} $C \subseteq V$ of a graph $G$.
 
-\begin{definition}
+\begin{definition}[Closed Node Set]
 Let $G = (V,E)$ be a graph and $C \subseteq V$. $C$ is called a closed node set iff the 
 condition $u \in C$ implies that for all edges $(u,v) \in E$ also $v \in C$.
 \end{definition}
